# cryptocurrency-board

./: .gitignore  AGENTS.md  CLAUDE.md  DockerFile  Dockerfile  README.md  init.ipynb  init.py  main.py  pyproject.toml  requirements.txt  test.ipynb
.github/workflows/: build.yaml  ci.yaml  cron.yaml  main.yaml  test.yaml
data/: btc-usd.csv  eth-usd.csv
docs/plans/: 2026-04-05-multi-window-dashboard.md
docs/specs/: 2026-04-05-multi-window-dashboard.md
docs/superpowers/plans/: 2026-04-05-crypto-board-redesign.md  2026-04-05-readme-ux-redesign.md
docs/superpowers/specs/: 2026-04-05-crypto-board-redesign.md  2026-04-05-readme-ux-design.md
src/: README.md  api.py  charts.py  models.py  readme.py  storage.py
templates/: readme.md
tests/: test_api.py  test_charts.py  test_models.py  test_rdoc.py  test_readme.py  test_storage.py
