[project]
name = "cryptocurrency-board"
version = "0.2.0"
description = "Automated cryptocurrency price monitoring with SVG charts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx",
    "pandas",
    "Jinja2",
    "pydantic",
    "pygal",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pyright",
    "respx",
]

[tool.pyright]
include = ["src", "main.py", "init.py"]
exclude = [".venv", "build", "dist", ".git"]
pythonVersion = "3.13"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
